--- a/src/index.css
+++ b/src/index.css
@@ -6,21 +6,25 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   list-style: none;
+  scroll-behavior: smooth;
 }
 body {
   background-color: #f4f5f7;
+
 }
 html{
   font-size: 62.5%;
 }
 
 :root{
-  --main-gradient: linear-gradient(67deg, rgba(249,179,141,1) 0%, rgba(247,183,175,1) 57%, rgba(222,100,115,1) 100%);
-  --main-color: white;
+  --main-background: rgb(231,158,143);
+  --main-gradient: linear-gradient(117deg, rgba(231,158,143,1) 0%, rgba(218,162,118,1) 57%, rgba(194,101,139,1) 100%);
+  --main-color: #f4f5f7;
 }
 
 .container_large{
   width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
 }
