--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,10 @@ html{
   --main-gradient: linear-gradient(117deg, rgba(231,158,143,1) 0%, rgba(218,162,118,1) 57%, rgba(194,101,139,1) 100%);
   --main-color: #f4f5f7;
 }
-
+h1,h2,h3,h4,h5,h6 {
+  font-size: 4rem;
+  font-weight: 400;
+}
 .container_large{
   width: 100%;
   height: 100vh;
