--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,9 @@
 /*===== Containers =====*/
 .header_large {
     width: 100%;
-    height: 80%;
-    white-space: nowrap;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
 }
 
 .main_container {
