--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,23 +1,12 @@
-/*===== Containers =====*/
-.header_large {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
 
 /*===== Welcome gradient section =====*/
 .welcome {
     position: relative;
-    display: flex;
-    justify-content: center;
-    width: 100%;
     max-height: 640px;
 }
 
 .welcome_photo {
-    /*max-height: 100%;*/
-    min-width: 50%;
-    object-fit: cover;
+    width: 50%;
 }
 
 .welcome__gradient {
@@ -34,13 +23,13 @@
 .hero {
     max-width: 30%;
     height: auto;
-    margin: 2.4rem;
+    margin: var(--margin-24px);
 }
 
 .welcome_description {
     color: var(--main-color);
-    font-size: 2rem;
-    margin: 2.4rem;
+    font-size: var(--font-normal);
+    margin: var(--margin-24px);
 
 }
 
@@ -75,14 +64,13 @@
 }
 
 .welcome_traits {
-   position: absolute;
+    position: absolute;
     top: 78%;
     left: 0;
     display: flex;
     justify-content: space-around;
-    /*margin-bottom: 5px;*/
     color: var(--main-color);
-    font-size: 2rem;
+    font-size: var(--font-normal);
     width: 50%;
 
 }
@@ -142,7 +130,7 @@
         flex-direction: column;
     }
     .welcome__gradient, .welcome_photo {
-        min-width: 100%;
+        width: 100%;
         height: 300px;
     }
     .hero {
