--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,48 +1,48 @@
-.about_wrapper{
-
-    display: flex;
-    justify-content: center;
+.about{
     align-items: center;
-
 }
-
-.about_text, .about_image {
-    height: 100%;
+.about__text, .about img {
     width: 50%;
-    padding: 3.4rem;
-
+    margin: var(--margin-24px);
 }
-.about_image {
-    display: flex;
-    justify-content: center;
+.about img {
+    border-radius: 15px;
+    height: 640px;
 }
 
-.about_text {
-    flex: 1 1 auto;
+.about__text {
     margin-bottom: 3rem;
     color: var(--section-text-color);
-    font-size: 1.7rem;
+   font-size: var(--font-normal);
 
 }
-.about_text p{
+.about__text p{
     margin: 3.5rem 0;
 }
 
-.about_image img {
-    display: block;
+.about__text h3 {
+    position: relative;
+    display: inline;
+}
+.about__text h3::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
     width: 100%;
-    height: 90%;
-    border-radius: 20px;
-    object-fit: cover;
+    height: 2px;
+    background-color: var(--main-background);
+
 }
 
-@media (max-width: 1024px) {
-    .about_wrapper {
-        flex-direction: column;
-    }
-    .about_text, .about_image {
-       width: 100%;
+/*@media (max-width: 1024px) {*/
+/*    .about_wrapper {*/
+/*        flex-direction: column;*/
+/*    }*/
+/*    .about_text, .about_image {*/
+/*       width: 100%;*/
 
-    }
-}
+/*    }*/
+/*}*/
 
