--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -27,7 +27,7 @@
 
 .welcome__description {
     color: var(--main-color);
-    font-size: var(--font-normal);
+    font-size: var(--font-header);
     margin: var(--margin-24px);
 
 }
@@ -69,7 +69,7 @@
     display: flex;
     justify-content: space-around;
     color: var(--main-color);
-    font-size: var(--font-normal);
+    font-size: var(--font-header);
     width: 50%;
 }
 
