--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,22 +1,14 @@
-.about{
-    /*align-items: center;*/
-}
+
 .about__text, .about img {
-    width: 60%;
     margin: var(--margin-24px);
 }
 
-.about img {
-    width: 40%;
-    border-radius: 15px;
-    height: auto;
-}
-
-.about__text {
+.about__text{
+    width: 60%;
+    padding: 0 1rem;
     margin-bottom: 3rem;
     color: var(--section-text-color);
-   font-size: var(--font-normal);
-
+    font-size: var(--font-normal);
 }
 .about__text p{
     margin: 3.5rem 0;
@@ -38,6 +30,12 @@
 
 }
 
+.about img {
+    width: 40%;
+    border-radius: 15px;
+    height: auto;
+}
+
 @media (max-width: 1024px) {
     .about {
         flex-direction: column-reverse;
@@ -53,5 +51,13 @@
     }
     .about img {
         padding: 0;
+    }
+}
+@media (max-width: 461px) {
+    .about__text{
+        font-size: var(--font-small);
+    }
+    .about__text p {
+        margin: 2.5rem 0;
     }
 }
