--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,6 +1,10 @@
 .skills__header {
     text-align: center;
+    margin-bottom: 3.5rem;
 }
+/*.skills__header h3:after {*/
+/*    content: 'abc ';*/
+/*}*/
 
 .skills__container {
     display: flex;
@@ -10,8 +14,8 @@
 }
 .skills__item {
     margin: var(--margin-24px);
-    border: 2px solid var(--main-background);
-    border-radius: 15px;
+    /*border: 3px solid var(--main-background);*/
+    /*border-radius: 15px;*/
     display: flex;
     flex-direction: column-reverse;;
     text-align: center;
@@ -25,3 +29,23 @@
     font-size: var(--font-normal);
 }
 
+.skills__item:last-child {
+    opacity: 0.1;
+    position: relative;
+    /*background-color: rgba(85, 85, 85,0.5);*/
+    transition: all 0.5s ease-in-out;
+
+}
+.skills__item:last-child:hover{
+    opacity: 1;
+}
+.skills__item:last-child:hover::after{
+    content: 'Work in progress';
+    border-bottom: 2px solid var(--main-background);
+    font-size: 1.5rem;
+    white-space: nowrap;
+    position: absolute;
+    top:0;
+    left: 50%;
+    transform: translateX(-50%);
+}
