--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ h3 {
   flex-direction: column;
 }
 section{
-  margin-top: 24rem;
+  margin-top: 20rem;
 }
 
 img {
@@ -73,4 +73,21 @@ img {
   section {
     margin-top: 10rem;
   }
+}
+
+h3 {
+  position: relative;
+  display: inline;
+  padding-bottom: 0.3rem;
+}
+h3::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--main-background);
+
 }
