--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -2,9 +2,6 @@
     text-align: center;
     margin-bottom: 3.5rem;
 }
-/*.skills__header h3:after {*/
-/*    content: 'abc ';*/
-/*}*/
 
 .skills__container {
     display: flex;
@@ -14,8 +11,6 @@
 }
 .skills__item {
     margin: var(--margin-24px);
-    /*border: 3px solid var(--main-background);*/
-    /*border-radius: 15px;*/
     display: flex;
     flex-direction: column-reverse;;
     text-align: center;
@@ -32,7 +27,6 @@
 .skills__item:last-child {
     opacity: 0.1;
     position: relative;
-    /*background-color: rgba(85, 85, 85,0.5);*/
     transition: all 0.5s ease-in-out;
 
 }
@@ -42,10 +36,16 @@
 .skills__item:last-child:hover::after{
     content: 'Work in progress';
     border-bottom: 2px solid var(--main-background);
-    font-size: 1.5rem;
+    font-size: var(--font-normal);
     white-space: nowrap;
     position: absolute;
     top:0;
     left: 50%;
     transform: translateX(-50%);
+}
+
+@media (max-width: 1024px) {
+    .skills__item:last-child:hover::after{
+        font-size: var(--font-small);
+    }
 }
