--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 h1 {
   font-size: 4rem;
-  white-space: nowrap;
+  /*white-space: nowrap;*/
 }
 h2 {
   color: var(--section-text-color);
