fix: about image fix

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -32,7 +32,7 @@
 .about img {
     width: 40%;
     border-radius: 15px;
-    height: auto;
+    max-height: 640px;
 }
 
 @media (max-width: 1024px) {
