--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,6 +1,7 @@
 .contact__header {
     text-align: center;
     margin-bottom: 3.5rem;
+    margin-top: var(--margin-24px);
 }
 .contact__form{
     display: flex;
