--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,9 @@ a, a:hover, a:focus, a:active {
   text-decoration: none;
   color: inherit;
 }
+button {
+  cursor: pointer;
+}
 h1,h2,h3,h4,h5,h6 {
   font-weight: 400;
 }
