feat: add media queries for smaller devices

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -37,3 +37,9 @@
     text-align: center;
     font-size: 3rem;
 }
+
+@media (max-width: 1024px) {
+    .contact__form, .message__submit {
+        width: 100%;
+    }
+}
