--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,13 @@ textarea, input {
   margin-bottom: 1rem;
 }
 
+@media (max-width: 1024px) {
+  textarea, input {
+    width: 100%;
+    /*font-size: var(--font-small);*/
+  }
+}
+
 textarea{
   resize: none;
   height: 100px
