--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,61 +1,70 @@
+.about {
+    margin-top: 24rem;
+}
 
 .about__text, .about img {
     margin: var(--margin-24px);
 }
 
-.about__text{
-    width: 60%;
-    padding: 0 1rem;
-    margin-bottom: 3rem;
+.about__text {
     color: var(--section-text-color);
-    font-size: var(--font-normal);
+    margin-bottom: 3.5rem;
+    padding: 0 1rem;
+    width: 60%;
 }
-.about__text p{
+
+.about__text p {
     margin: 3.5rem 0;
 }
 
 .about__text h3 {
-    position: relative;
     display: inline;
+    position: relative;
 }
+
 .about__text h3::after {
-    content: '';
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
-    width: 100%;
-    height: 2px;
     background-color: var(--main-background);
+    bottom: 0;
+    content: '';
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    width: 100%;
 }
 
 .about img {
-    width: 40%;
     border-radius: 15px;
     max-height: 640px;
+    width: 40%;
 }
 
 @media (max-width: 1024px) {
     .about {
-        flex-direction: column-reverse;
         align-items: center;
+        flex-direction: column-reverse;
     }
+
     .about h2, .about h3 {
         display: block;
         text-align: center;
     }
+
     .about__text, .about img {
-        width: 80%;
         padding: 0 2rem;
+        width: 80%;
     }
+
     .about img {
         padding: 0;
     }
 }
+
 @media (max-width: 461px) {
-    .about__text{
+    .about__text {
         font-size: var(--font-small);
     }
+
     .about__text p {
         margin: 2.5rem 0;
     }
