--- a/src/index.css
+++ b/src/index.css
@@ -1,125 +1,135 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-  list-style: none;
-  text-decoration: none;
-  scroll-behavior: smooth;
-  outline: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    list-style: none;
+    margin: 0;
+    outline: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    text-decoration: none;
 }
+
 body {
-  background-color: #f4f7f6;
-  display: block;
-  /*background: rgb(227,227,227);*/
-  /*background: linear-gradient(180deg, rgba(227,227,227,1) 0%, rgba(236,236,236,1) 50%, rgba(242,242,242,1) 100%);*/
-
-}
-html{
-  font-size: 62.5%;
+    background-color: #f4f7f6;
+    display: block;
 }
 
-::-webkit-scrollbar{
-  display: none;
+html {
+    font-size: 62.5%;
 }
 
-:root{
-  --main-background: rgb(231,158,143);
-  --main-gradient: linear-gradient(117deg, rgba(231,158,143,1) 0%, rgba(218,162,118,1) 57%, rgba(194,101,139,1) 100%);
-  --main-color: #f4f5f7;
-  --secondary-color: #232325;
-  --secondary-background: #f7f7f9;
-  --section-text-color: #555555;
-  --font-header: 2rem;
-  --font-normal: 1.7rem;
-  --font-small: 1rem;
-  --margin-24px: 2.4rem;
+::-webkit-scrollbar {
+    display: none;
+}
+
+:root {
+    --default-radius: 10px;
+    --font-header: 2rem;
+    --font-normal: 1.7rem;
+    --font-small: 1rem;
+    --main-background: rgb(231, 158, 143);
+    --main-color: #f4f7f6;
+    --main-gradient: linear-gradient(117deg, rgba(231, 158, 143, 1) 0%, rgba(218, 162, 118, 1) 57%, rgba(194, 101, 139, 1) 100%);
+    --margin-24px: 2.4rem;
+    --secondary-color: #232325;
+    --section-text-color: #555555;
+    --transition: all 0.5s;
 }
 
 a, a:hover, a:focus, a:active {
-  text-decoration: none;
-  color: inherit;
+    color: inherit;
+    text-decoration: none;
 }
+
 button {
-  cursor: pointer;
+    border-radius: var(--default-radius);
+    cursor: pointer;
 }
-h1,h2,h3,h4,h5,h6 {
-  font-weight: 400;
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 400;
 }
+
 h1 {
-  font-size: 4rem;
-  /*white-space: nowrap;*/
+    font-size: 4rem;
 }
+
 h2 {
-  color: var(--section-text-color);
-  font-size: 1.5rem;
+    color: var(--section-text-color);
+    font-size: 1.5rem;
 }
+
 h3 {
-  font-size: 3.5rem;
-  color: var(--secondary-color)
-}
-.flex__center {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.column {
-  flex-direction: column;
-  align-items: center;
-}
-section{
-  margin-top: 24rem;
-  color: var(--section-text-color)
-}
-textarea, input {
-  color: var(--section-text-color);
-  width: 80%;
-  font-size: var(--font-normal);
-  background: #f0f0f0;
-  padding: 1rem;
-  border-radius: 10px;
-  border: 1px solid #e2e2e2;
-  margin-bottom: 1rem;
+    color: var(--secondary-color);
+    font-size: 3.5rem;
 }
 
-@media (max-width: 1024px) {
-  textarea, input {
+h3 {
+    display: inline;
+    padding-bottom: 0.3rem;
+    position: relative;
+}
+
+h3::after {
+    background-color: var(--main-background);
+    bottom: 0;
+    content: '';
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
     width: 100%;
-    /*font-size: var(--font-small);*/
-  }
 }
 
-textarea{
-  resize: none;
-  height: 100px
+p {
+    font-size: var(--font-normal);
+}
+
+.flex__center {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.column {
+    align-items: center;
+    flex-direction: column;
+}
+
+section {
+    color: var(--section-text-color);
+    margin: 20rem 0;
+}
+
+textarea, input {
+    background: #f0f0f0;
+    border-radius: var(--default-radius);
+    border: 1px solid #e2e2e2;
+    color: var(--section-text-color);
+    font-size: var(--font-normal);
+    margin-bottom: 1rem;
+    padding: 1rem;
+    width: 80%;
+}
+
+textarea {
+    height: 100px;
+    resize: none;
 }
 
 img {
-  display: block;
-  object-fit: cover;
+    display: block;
+    object-fit: cover;
 }
 
 @media (max-width: 1024px) {
-  section {
-    margin-top: 10rem;
-  }
+    section {
+        margin-top: 10rem;
+    }
+    textarea, input {
+        width: 100%;
+    }
 }
 
-h3 {
-  position: relative;
-  display: inline;
-  padding-bottom: 0.3rem;
-}
-h3::after {
-  content: '';
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 0;
-  width: 100%;
-  height: 2px;
-  background-color: var(--main-background);
-
-}
