--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -25,6 +25,7 @@
 
 .message__submit:hover {
     background: rgb(221, 158, 143);
+    background: linear-gradient(117deg, rgba(221, 158, 143, 1) 0%, rgba(208, 162, 118, 1) 57%, rgba(184, 101, 139, 1) 100%);
 }
 
 .contact__alternatives {
