--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,7 @@ img {
     }
 }
 footer p {
+    color: var(--section-text-color);
     font-size: var(--font-small);
     padding: 2rem 5rem;
 }
