feat: add other heading for skills section for smaller devices

--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -4,6 +4,10 @@
     text-align: center;
 }
 
+.h3__mobile {
+    display: none;
+}
+
 .skills__container {
     display: flex;
     flex-wrap: wrap;
@@ -49,5 +53,14 @@
 @media (max-width: 1024px) {
     .skills__item:last-child:hover::after {
         font-size: var(--font-small);
+    }
+}
+
+@media (max-width: 460px) {
+    .h3__mobile {
+        display: inline;
+    }
+    .h3__large {
+        display: none;
     }
 }
