--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-color: #f4f7f6;
+    background-color: var(--secondary-background);
     display: block;
 }
 
@@ -26,14 +26,14 @@ html {
 
 :root {
     --default-radius: 10px;
+    --secondary-background: #f4f7f6;
     --font-header: 2rem;
     --font-normal: 1.7rem;
     --font-small: 1rem;
     --main-background: rgb(231, 158, 143);
-    --main-color: #f4f7f6;
     --main-gradient: linear-gradient(117deg, rgba(231, 158, 143, 1) 0%, rgba(218, 162, 118, 1) 57%, rgba(194, 101, 139, 1) 100%);
     --margin-24px: 2.4rem;
-    --secondary-color: #232325;
+    --main-color: #232325;
     --section-text-color: #555555;
     --transition: all 0.5s;
 }
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 6rem;
 }
 
 h2 {
@@ -61,8 +61,8 @@ h2 {
     font-size: 1.5rem;
 }
 
-h3 {
-    color: var(--secondary-color);
+h3, header span {
+    color: var(--main-color);
     font-size: 3.5rem;
 }
 
@@ -100,7 +100,7 @@ p {
 
 section {
     color: var(--section-text-color);
-    margin: 20rem 0;
+    margin: 16rem 0;
 }
 
 textarea, input {
@@ -125,6 +125,12 @@ img {
 }
 
 @media (max-width: 1024px) {
+    header span {
+        font-size: 2.7rem;
+    }
+    h1 {
+        font-size: 4rem;
+    }
     section {
         margin-top: 10rem;
     }
