--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 * {
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     list-style: none;
     margin: 0;
     outline: 0;
@@ -80,7 +80,7 @@ h4 {
 h3::after, h4:after {
     background-color: var(--main-background);
     bottom: 0;
-    content: '';
+    content: "";
     height: 2px;
     left: 50%;
     position: absolute;
