--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -18,41 +18,21 @@
     display: flex;
     flex-direction: column-reverse;;
     margin: var(--margin-24px);
-    min-width: 15%;
+    width: 250px;
+    max-width: 15%;
     text-align: center;
+    border-radius: var(--default-radius);
+    transition: all 0.3s ease-in;
+}
+.skills__item:hover {
+    scale: 1.05;
+    box-shadow: inset 0 0 10px #7d7d7d;
 }
 
 .skills__item img {
-    max-height: 140px;
+    max-height: 150px;
     object-fit: fill;
-    padding: 1rem;
-}
-
-.skills__item:last-child {
-    opacity: 0.1;
-    position: relative;
-    transition: var(--transition);
-}
-
-.skills__item:last-child:hover {
-    opacity: 1;
-}
-
-.skills__item:last-child:hover::after {
-    border-bottom: 2px solid var(--main-background);
-    content: "Work in progress";
-    font-size: var(--font-normal);
-    left: 50%;
-    position: absolute;
-    top: 0;
-    transform: translateX(-50%);
-    white-space: nowrap;
-}
-
-@media (max-width: 1024px) {
-    .skills__item:last-child:hover::after {
-        font-size: var(--font-small);
-    }
+    padding: 2rem;
 }
 
 @media (max-width: 460px) {
