--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -27,6 +27,12 @@
     margin: var(--margin-24px);
     max-width: 600px;
     padding: 0.5rem 0;
+    transition: all 0.3s ease-in;
+}
+
+.projects__card:hover {
+    scale: 1.02;
+    box-shadow: inset 0 0 10px #7d7d7d;
 }
 
 .projects__card > * {
