--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -36,6 +36,10 @@
 }
 
 @media (max-width: 460px) {
+    .skills__item img {
+        padding: 1.1rem;
+    }
+
     .h3__mobile {
         display: inline;
     }
