--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 100vh;
+    height: 100vh;
     padding: 168px 0;
     text-align: center;
 }
